# shipstation_integration

./: .pre-commit-config.yaml  .prettierignore  .prettierrc.cjs  .releaserc.json  CONTRIBUTING.md  README.md  pyproject.toml
.github/helper/: install.sh  install_dependencies.sh  site_config.json
.github/workflows/: frappe.yml  lint.yaml
shipstation_integration/: __init__.py  customer.py  hooks.py  install.py  items.py  orders.py  patches.txt  setup.py  shipments.py  shipping.py  tags.py  utils.py
shipstation_integration/config/: desktop.py  docs.py
shipstation_integration/patches/: add_custom_queue.py  delete_delivery_note_shipment_custom_fields.py  set_enable_checks_in_shipstation_store.py  update_order_item_ids.py  update_shipstation_warehouses.py
shipstation_integration/public/js/: delivery_note.js  sales_order.js  sales_order_list.js  shipping.js  shipstation_integration.bundle.js  shipstation_settings_list.js  tag_list.js  tags.js
shipstation_integration/shipstation_integration/: boot.py
shipstation_integration/shipstation_integration/custom/: delivery_note.json  delivery_note_item.json  item.json  item_barcode.json  packed_item.json  sales_invoice.json  sales_invoice_item.json  sales_order.json  sales_order_item.json  sales_partner.json  shipment.json  shipment_parcel.json  tag.json  warehouse.json
shipstation_integration/shipstation_integration/doctype/shipstation_option/: shipstation_option.json  (+1 more)
shipstation_integration/shipstation_integration/overrides/: sales_order.py
shipstation_integration/templates/includes/: carriers.html
shipstation_integration/tests/: setup.py
(+10 files in other folders)
