[tool.poetry]
name = "shipstation_integration"
version = "0.0.1"
authors = ["AgriTheory <support@agritheory.dev>"]
description = "Shipstation integration for ERPNext"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
shipstation-client = {git = "https://github.com/agritheory/shipstation-client", python = ">=3.10,<3.13"}
test_utils = {git = "https://github.com/agritheory/test_utils", python = ">=3.10,<3.13"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"
